fixing broken img links, updating Readme

--- a/MeasureHandles.roboFontExt/info.plist
+++ b/MeasureHandles.roboFontExt/info.plist
@@ -28,7 +28,7 @@
 	<key>requiresVersionMinor</key>
 	<string>5</string>
 	<key>timeStamp</key>
-	<real>1444042932.547111</real>
+	<real>1444043162.6921711</real>
 	<key>version</key>
 	<string>0.1</string>
 </dict>
