--- a/MeasureHandles.roboFontExt/info.plist
+++ b/MeasureHandles.roboFontExt/info.plist
@@ -28,7 +28,7 @@
 	<key>requiresVersionMinor</key>
 	<string>5</string>
 	<key>timeStamp</key>
-	<real>1444043420.4123211</real>
+	<real>1444043585.295007</real>
 	<key>version</key>
 	<string>0.1</string>
 </dict>
